js/js.translator/testData/incremental/invalidation/toplevelPropertiesWithIntraModuleInliner/lib2/l2.19.kt
fun testToplevelProperties(): Int {
    return globalValWrapper().toInt() +
            inlineGlobalVarWrapper().toInt() +
            8.inlineExtensionPropertyWrapper().toInt()
}
